fix: resolve CORS errors and point to production database